Banners Brook Brothers

--- a/Brooks Brothers/Fade300x250.html
+++ b/Brooks Brothers/Fade300x250.html
@@ -66,15 +66,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/sd0DdJU.jpg)
+            background-image: url(https://i.imgur.com/cjBiqzP.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/EVTwbwf.jpg)
+            background-image: url(https://i.imgur.com/4EFnwrI.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/t8eP8Fl.jpg)
+            background-image: url(https://i.imgur.com/phjBeOq.jpg)
 
         }
 
@@ -260,17 +260,17 @@
             
             height:35px;
             margin-top: 7px; 
-            margin-left:260px;
+            margin-left:185px;
 
         }
 
         .cta {
             position: absolute;
-            bottom: 68px;
+            bottom: 40px;
             width: 140px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 62px;
+            margin-left: 50px;
             background-color: #;
             padding: 5px;
             border-radius: 20px;
@@ -283,37 +283,37 @@
    <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
-        <div class="cta"> <a href="https://www.lifetimeplay.tv/mx/lifetime-movies" target="_blank">
-    <img src="https://i.imgur.com/4pemBrN.png" style="height: 45px;"></a></div>   
+        <div class="cta"> <a href="https://www.brooksbrothers.mx/" target="_blank">
+    <img src="https://i.imgur.com/10TeVmm.png" style="height: 100px;"></a></div>   
 
-        <a href="https://www.lifetimeplay.tv/mx/lifetime-movies" target="_blank">
+        <a href="https://www.brooksbrothers.mx/" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>Victoria Gotti: La Hija de la Mafia.</b><br>Estreno exclusivo, sábado 15 de junio.</br></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>Lleva a todos lados un outfit cómodo y con estilo.</b><!--<br>Estreno exclusivo, sábado 15 de junio.</br>--></span>
                </div>
 
                 <div class="cta" > <img src="" style="height: 45px;"></div>
 
             <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/Q7x8xSr.png"></div>
+            <div class="logo"> <img id="logo" src="https://i.imgur.com/N7p02vj.png"></div>
 
 
                 <!--PARA QUITAR LOS BOTONES SOLO COMENTAR Y CERRAR-->
 
                 <div id="botones-para-compartir"> 
                    
-                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.lifetimeplay.tv/mx/lifetime-movies"  target="block">    
-                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/WV1DSVZ.png" title="compartir en facebook" width="22" /></a>
+                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https:https://www.brooksbrothers.mx/"  target="block">    
+                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/W95npHa.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=https://www.lifetimeplay.tv/mx/lifetime-movies" target="block">
-                            <img alt="compartir en whatsapp" class="whatsappi" height="22" src="https://i.imgur.com/n0J7vCp.png" title="compartir en whatsapp" width="22" /></a>
+                            <a class="shared" href="whatsapp://send?text=https://www.brooksbrothers.mx/" target="block">
+                            <img alt="compartir en whatsapp" class="whatsappi" height="22" src="https://i.imgur.com/HwqP6vx.png" title="compartir en whatsapp" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.lifetimeplay.tv/mx/lifetime-movies" target="block">
-                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/uabhexm.png" title="compartir en twitter" width="22" /></a> </span></div>
+                            <a class="shared" href="https://twitter.com/home?status=https://www.brooksbrothers.mx/" target="block">
+                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ybxwn2r.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
