--- a/Brooks Brothers/ZoomExp300x600.html
+++ b/Brooks Brothers/ZoomExp300x600.html
@@ -60,7 +60,7 @@ a {text-decoration: none;}
             z-index: 5;
             margin-left: 80px;
            
-            background-color: #003a70;
+            background-color: #182C47;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
