--- a/VW T-cross/VideoInteractivoMargenFranjas.html
+++ b/VW T-cross/VideoInteractivoMargenFranjas.html
@@ -93,13 +93,14 @@
                 position: relative;
             }
             .video-container .circle {
-                width: 110px;
-                height: 28px;
-                 border-radius: 10px;
-                border: 1px solid #ededed;
-                background-color: #ffffff;
-                cursor: pointer;
-            }
+           width: 110px;
+           height: 28px;
+           border-radius: 10px;
+           background-position: center !important;
+           background-size: 150px 50px !important;
+           left: 105px !important;
+           cursor: pointer;
+       }
 
 
             /* The Modal (background) */
