--- a/VW T-cross/Fade300x250.html
+++ b/VW T-cross/Fade300x250.html
@@ -270,7 +270,7 @@
             width: 140px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 45px;
+            margin-left: 53px;
             background-color: #;
             padding: 5px;
             border-radius: 20px;
@@ -285,7 +285,7 @@
    <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
-        <div class="cta">  <img src="https://i.imgur.com/ywprBbg.png" style="height: 55px;"></a></div>
+        <div class="cta">  <img src="https://i.imgur.com/m9EbvwD.png" style="height: 50px;"></a></div>
           
         <a href="https://www.diariomotor.com/coche/volkswagen-t-cross/" target="_blank"> 
 
