--- a/VW T-cross/Venetian.html
+++ b/VW T-cross/Venetian.html
@@ -2228,7 +2228,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 225px; height: 63px;
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 217px; height: 61px;
         -ms-transform: translate(0, 0) translate(48px, 309px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(48px, 309px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(48px, 309px) rotate(0deg);
@@ -2274,7 +2274,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/FE5MwXc.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/ywprBbg.png"/>
+<img id="i46" src="https://i.imgur.com/m9EbvwD.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">¿Quieres conocer el pequeño SUV de Volkswagen?</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
