--- a/Brooks Brothers/ZoomExp300x600.html
+++ b/Brooks Brothers/ZoomExp300x600.html
@@ -70,13 +70,22 @@ a {text-decoration: none;}
      
 
         .zoom .ism_text {
-            margin-top: 25px;
+            margin-top: 18px;
             margin-left: 2px;
             text-align:center;
             padding-left: 4px;
             text-decoration: none;
             width: 95%;
         }
+        .zoom .ism_text_2 {
+            margin-top: -20px;
+            margin-left: 2px;
+            text-align:center;
+            padding-left: 4px;
+            text-decoration: none;
+            width: 95%;
+        }
+
 
         .zoom .ism_text_title {
             font-size: 10px;
@@ -85,6 +94,7 @@ a {text-decoration: none;}
             font-weight: 100;
             text-align: center;
         }
+
 
         .zoom .ism_text_bold,
         .zoom .ism_text_medium {
@@ -174,7 +184,8 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:18px;  text-decoration: none;"><b>¡STAY COOL!</b><br>Colección Red Fleece, una propuesta fresca y juvenil.</span></br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Trebuchet MS; color:#000000; font-size:22px;  text-decoration: none;"><b>¡STAY COOL!</b></span> 
+<div class="ism_text_2"> <span style="font-family:Trebuchet MS; margin-top: -20px; color:#000000; font-size:18px; text-decoration: none;"> <br>Colección Red Fleece, una propuesta fresca y juvenil.</br></span>
 
                    
                    </div>
