--- a/Brooks Brothers/Fade300x250.html
+++ b/Brooks Brothers/Fade300x250.html
@@ -70,7 +70,7 @@
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/4EFnwrI.jpg)
+            background-image: url(https://i.imgur.com/4bafuEv.png)
         }
 
         .fadesmall .bg.cover-3 {
@@ -284,7 +284,7 @@
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
         <div class="cta"> <a href="https://www.brooksbrothers.mx/" target="_blank">
-    <img src="https://i.imgur.com/10TeVmm.png" style="height: 100px;"></a></div>   
+    <img src="https://i.imgur.com/4fE2MT7.png" style="height: 100px;"></a></div>   
 
         <a href="https://www.brooksbrothers.mx/" target="_blank">
             <div class="carousel-container">
