--- a/Brooks Brothers/ZoomExp300x600.html
+++ b/Brooks Brothers/ZoomExp300x600.html
@@ -163,7 +163,7 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/zzrc4sD.jpg">
+      <img src="https://i.imgur.com/tRkKiLf.png">
       
     <li>
       <img src="https://i.imgur.com/6DLiccA.jpg">
