Ajustes requeridos realizados.

--- a/Falabella3/cube/main/Cube.html
+++ b/Falabella3/cube/main/Cube.html
@@ -650,16 +650,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i286.image.css:image/base/css*/
 #i286 { opacity: 1; }
 /*#/#*//*#i286.i287.positioning.css:positioning/base/css.2*/
-#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 158px; height: 131px;
-        -ms-transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
-        transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
+#i286 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 88px;
+        -ms-transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
+        transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
 /*#/#*//*#i181.i182.positioning.css:positioning/base/css.2*/
-#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 28px;
+#i181 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 42px; height: 29px;
         -ms-transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
@@ -772,10 +772,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i416 { opacity: 1; }
 /*#/#*//*#i416.i417.positioning.css:positioning/base/css.2*/
 #i416 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 23px; height: 24px;
-        -ms-transform: translate(0, 0) translate(52px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(52px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(52px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(52px, 223px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(52px, 224px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(52px, 224px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(52px, 224px) rotate(0deg);
+        transform: translate(0, 0) translate(52px, 224px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -786,14 +786,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i460.image.css:image/base/css*/
-#i460 { opacity: 1; }
-/*#/#*//*#i460.i461.positioning.css:positioning/base/css.2*/
-#i460 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 158px; height: 131px;
-        -ms-transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
-        transform: translate(0, 0) translate(87px, 80px) rotate(0deg);
+/*#/#*//*#i5.i464.image.css:image/base/css*/
+#i464 { opacity: 1; }
+/*#/#*//*#i464.i465.positioning.css:positioning/base/css.2*/
+#i464 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 88px;
+        -ms-transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
+        transform: translate(0, 0) translate(77px, 109px) rotate(0deg);
 }
 /*#/#*//*#i5.i434.shape.css:shape/base/css*/
 #i434 { background-color: #dedede; opacity: 0.00;
@@ -835,14 +835,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i462.image.css:image/base/css*/
-#i462 { opacity: 1; }
-/*#/#*//*#i462.i463.positioning.css:positioning/base/css.2*/
-#i462 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 158px; height: 131px;
-        -ms-transform: translate(0, 0) translate(87px, 21px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(87px, 21px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(87px, 21px) rotate(0deg);
-        transform: translate(0, 0) translate(87px, 21px) rotate(0deg);
+/*#/#*//*#i6.i466.image.css:image/base/css*/
+#i466 { opacity: 1; }
+/*#/#*//*#i466.i467.positioning.css:positioning/base/css.2*/
+#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 88px;
+        -ms-transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
+        transform: translate(0, 0) translate(77px, 81px) rotate(0deg);
 }
 /*#/#*//*#i6.i406.image.css:image/base/css*/
 #i406 { opacity: 1; }
@@ -857,10 +857,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i440 { opacity: 1; }
 /*#/#*//*#i440.i441.positioning.css:positioning/base/css.2*/
 #i440 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(54px, 223px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(54px, 223px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(54px, 223px) rotate(0deg);
-        transform: translate(0, 0) translate(54px, 223px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 224px) rotate(0deg);
 }
 /*#/#*//*#i6.i444.image.css:image/base/css*/
 #i444 { opacity: 1; }
@@ -925,7 +925,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/Sf3zJXy.jpg"/>
 <!--#/#--><!--#i4.i286.image.html:image/html-->
-<img id="i286" src="https://i.imgur.com/Dw4Sym9.png"/>
+<img id="i286" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -958,8 +958,8 @@ url('fonts/') format('svg');
 <img id="i416" src="https://i.imgur.com/3WrUEnv.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/ZPJxXHY.jpg"/>
-<!--#/#--><!--#i5.i460.image.html:image/html-->
-<img id="i460" src="https://i.imgur.com/Dw4Sym9.png"/>
+<!--#/#--><!--#i5.i464.image.html:image/html-->
+<img id="i464" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
 <div id="i434"></div>
 <!--#/#--><!--#i5.i412.text.html:text/html-->
@@ -972,8 +972,8 @@ url('fonts/') format('svg');
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/bBsnp8P.jpg"/>
-<!--#/#--><!--#i6.i462.image.html:image/html-->
-<img id="i462" src="https://i.imgur.com/Dw4Sym9.png"/>
+<!--#/#--><!--#i6.i466.image.html:image/html-->
+<img id="i466" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/Dcokx8V.png"/>
 <!--#/#--><!--#i6.i440.image.html:image/html-->
@@ -1164,10 +1164,10 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i460.image.js:image/base/js*/
+/*#/#*//*#i5.i464.image.js:image/base/js*/
 
-/*#/#*//*#i460.i461.positioning.js:positioning/base/js.2*/
-bmShow('i460');
+/*#/#*//*#i464.i465.positioning.js:positioning/base/js.2*/
+bmShow('i464');
 /*#/#*//*#i434.i435.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i434');
@@ -1203,10 +1203,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i6.i462.image.js:image/base/js*/
+/*#/#*//*#i6.i466.image.js:image/base/js*/
 
-/*#/#*//*#i462.i463.positioning.js:positioning/base/js.2*/
-bmShow('i462');
+/*#/#*//*#i466.i467.positioning.js:positioning/base/js.2*/
+bmShow('i466');
 /*#/#*//*#i6.i406.image.js:image/base/js*/
 
 /*#/#*//*#i406.i407.positioning.js:positioning/base/js.2*/
@@ -1388,10 +1388,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i460.image.meta:image/meta*/
+/*#/#*//*#i5.i464.image.meta:image/meta*/
 name: BOTON copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i460.i461.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i464.i465.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i434.shape.meta:shape/meta*/
 name: Link copy;
@@ -1412,10 +1412,10 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i462.image.meta:image/meta*/
+/*#/#*//*#i6.i466.image.meta:image/meta*/
 name: BOTON copy 2; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
-/*#/#*//*#i462.i463.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i466.i467.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i406.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
