--- a/Falabella3/main/Venetian320x480.html
+++ b/Falabella3/main/Venetian320x480.html
@@ -2145,7 +2145,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 294px; height: 58px;
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 294px; height: 73px;
         -ms-transform: translate(0, 0) translate(13px, 262px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(13px, 262px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(13px, 262px) rotate(0deg);
@@ -2174,11 +2174,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 180px; height: 150px;
-        -ms-transform: translate(0, 0) translate(94px, 300px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(94px, 300px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(94px, 300px) rotate(0deg);
-        transform: translate(0, 0) translate(94px, 300px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 148px; height: 89px;
+        -ms-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+        transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 40px;
@@ -2266,7 +2266,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.image.css:image/base/css*/
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 26px; height: 26px;
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
         -ms-transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
@@ -2335,7 +2335,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i42.image.html:image/html-->
 <img id="i42" src="https://i.imgur.com/LzWZPDl.jpg"/>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/Dw4Sym9.png"/>
+<img id="i44" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i48.image.html:image/html-->
@@ -2513,7 +2513,7 @@ customName: false;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: Dw4Sym9.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: CGzIxHl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
