--- a/AUTOMERCOL/Venetian.html
+++ b/AUTOMERCOL/Venetian.html
@@ -2253,22 +2253,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
 }
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 68px;
-        -ms-transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 290px; height: 68px;
+        -ms-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 85px;
-        -ms-transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
-        transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 311px; height: 36px;
+        -ms-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
 }
 /*#/#*//*#i81.shape.css:shape/base/css*/
 #i81 { background-color: #dedede; opacity: 0.00;
@@ -2335,19 +2335,17 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/HHITFNu.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/XpVuu5B.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/3pTJ1fK.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/1CiMOEB.gif"></dataimg>
 <!--#/#--><!--#i2.i76.slice-image.html:slice-image/html.1-->
-<dataimg id="i76" src="https://i.imgur.com/nj4wMso.gif"></dataimg>
+<dataimg id="i76" src="https://i.imgur.com/wOlRToS.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/pc1LZBY.jpg"></dataimg>
-<!--#/#--><!--#i2.i103.slice-image.html:slice-image/html.1-->
-<dataimg id="i103" src="https://i.imgur.com/bnjbW5R.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/Lz5HsUI.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/JhOlfmV.png"/>
+<img id="i74" src="https://i.imgur.com/PWZ9bB1.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/JnIbDNc.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2355,9 +2353,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i95.image.html:image/html-->
 <img id="i95" src="https://i.imgur.com/OKQmjNX.gif"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">En #Automercol encuentras todas las facilidades para llevártelo a casa.</div>
+<div id="i68">#Automercol le brinda servicio autorizado en el taller Mercedes-Benz de mayor experiencia y tradición del país.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¿Estás listo para estrenar Mercedes-Benz?</div>
+<div id="i63">Aunque su Mercedes-Benz no haya sido comprado en nuestro concesionario.</div>
 <!--#/#--><!--#i81.shape.html:shape/html-->
 <div id="i81"></div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
@@ -2426,8 +2424,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
-/*#/#*//*#i2.i103.slice-image.js:slice-image/base/js.1*/
-
 /*#/#*//*#i2.i57.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i2');
@@ -2469,7 +2465,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2484,7 +2480,7 @@ var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2499,7 +2495,7 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2516,7 +2512,7 @@ var el = document.getElementById('i89');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2533,7 +2529,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2550,7 +2546,7 @@ var el = document.getElementById('i93');
 
 el.addEventListener('click', function(e){
     /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2583,17 +2579,14 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: HHITFNu.jpg; fileId: ; sourceTypeId: externalUrl;
+name: XpVuu5B.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 3pTJ1fK.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 1CiMOEB.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i76.slice-image.meta:slice-image/meta.1*/
-name: nj4wMso.gif; fileId: ; sourceTypeId: externalUrl;
+name: wOlRToS.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: pc1LZBY.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i103.slice-image.meta:slice-image/meta.1*/
-name: bnjbW5R.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
+name: Lz5HsUI.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i74.image.meta:image/meta*/
@@ -2617,11 +2610,11 @@ customName: 1;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: En #Automercol encuentras todas las facilidades para llevártelo a casa.; customName: false;
+name: #Automercol le brinda servicio autorizado en el taller Mercedes-Benz de mayor experiencia y tradición del país.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¿Estás listo para estrenar Mercedes-Benz?; customName: false;
+name: Aunque su Mercedes-Benz no haya sido comprado en nuestro concesionario.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i81.shape.meta:shape/meta*/
