--- a/AUTOMERCOL/Venetian.html
+++ b/AUTOMERCOL/Venetian.html
@@ -2131,15 +2131,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i105.image.css:image/base/css*/
-#i105 { opacity: 1; }
-/*#/#*//*#i105.i106.positioning.css:positioning/base/css.2*/
-#i105 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
     position: absolute;
@@ -2160,6 +2151,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i74.image.css:image/base/css*/
 #i74 { opacity: 1; }
+/*#/#*//*#i74.i75.positioning.css:positioning/base/css.2*/
+#i74 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
+        -ms-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
+}
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
@@ -2168,6 +2166,47 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(188px, 441px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(188px, 441px) rotate(0deg);
         transform: translate(0, 0) translate(188px, 441px) rotate(0deg);
+}
+/*#/#*//*#i46.image.css:image/base/css*/
+#i46 { opacity: 1; }
+/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 156px; height: 37px;
+        -ms-transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
+        transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
+}
+/*#/#*//*#i95.image.css:image/base/css*/
+#i95 { opacity: 1; }
+/*#/#*//*#i95.i96.positioning.css:positioning/base/css.2*/
+#i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
+        -ms-transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
+        transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
+}
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 68px;
+        -ms-transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 301px) rotate(0deg);
+}
+/*#/#*//*#i63.text.css:text/base/css*/
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 85px;
+        -ms-transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
+        transform: translate(0, 0) translate(24px, 257px) rotate(0deg);
+}
+/*#/#*//*#i105.i106.positioning.css:positioning/base/css.2*/
+#i105 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2227,49 +2266,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i74.i75.positioning.css:positioning/base/css.2*/
-#i74 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
-        -ms-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 359px) rotate(0deg);
-}
-/*#/#*//*#i46.image.css:image/base/css*/
-#i46 { opacity: 1; }
-/*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 156px; height: 37px;
-        -ms-transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
-        transform: translate(0, 0) translate(81px, 342px) rotate(0deg);
-}
-/*#/#*//*#i95.image.css:image/base/css*/
-#i95 { opacity: 1; }
-/*#/#*//*#i95.i96.positioning.css:positioning/base/css.2*/
-#i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 45px; height: 45px;
-        -ms-transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
-        transform: translate(0, 0) translate(136px, 389px) rotate(0deg);
-}
 /*#/#*//*#i68.text.css:text/base/css*/
-#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 290px; height: 68px;
-        -ms-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 293px) rotate(0deg);
-}
-/*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 311px; height: 36px;
-        -ms-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 257px) rotate(0deg);
-}
+#i68 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i105.image.css:image/base/css*/
+#i105 { opacity: 1; }
 /*#/#*//*#i81.shape.css:shape/base/css*/
 #i81 { background-color: #dedede; opacity: 0.00;
 }
@@ -2330,22 +2330,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i105.image.html:image/html-->
-<img id="i105" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/XpVuu5B.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/HHITFNu.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/1CiMOEB.gif"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/3pTJ1fK.jpg"></dataimg>
 <!--#/#--><!--#i2.i76.slice-image.html:slice-image/html.1-->
-<dataimg id="i76" src="https://i.imgur.com/wOlRToS.jpg"></dataimg>
+<dataimg id="i76" src="https://i.imgur.com/nj4wMso.gif"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/Lz5HsUI.gif"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/pc1LZBY.jpg"></dataimg>
+<!--#/#--><!--#i2.i103.slice-image.html:slice-image/html.1-->
+<dataimg id="i103" src="https://i.imgur.com/bnjbW5R.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i74.image.html:image/html-->
-<img id="i74" src="https://i.imgur.com/PWZ9bB1.jpg"/>
+<img id="i74" src="https://i.imgur.com/JhOlfmV.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/JnIbDNc.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2353,9 +2353,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i95.image.html:image/html-->
 <img id="i95" src="https://i.imgur.com/OKQmjNX.gif"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">#Automercol le brinda servicio autorizado en el taller Mercedes-Benz de mayor experiencia y tradición del país.</div>
+<div id="i68">En #Automercol encuentras todas las facilidades para llevártelo a casa.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Aunque su Mercedes-Benz no haya sido comprado en nuestro concesionario.</div>
+<div id="i63">¿Estás listo para estrenar Mercedes-Benz?</div>
+<!--#/#--><!--#i105.image.html:image/html-->
+<img id="i105" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i81.shape.html:shape/html-->
 <div id="i81"></div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
@@ -2374,10 +2376,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
-/*#/#*//*#i105.image.js:image/base/js*/
-
-/*#/#*//*#i105.i106.positioning.js:positioning/base/js.2*/
-bmShow('i105');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2424,6 +2422,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i103.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i2.i57.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i2');
@@ -2457,6 +2457,10 @@ bmShow('i95');
 bmShow('i68');
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
+/*#/#*//*#i105.image.js:image/base/js*/
+
+/*#/#*//*#i105.i106.positioning.js:positioning/base/js.2*/
+bmShow('i105');
 /*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
 bmShow('i81');
 /*#/#*//*#i81.i85.actions.js:actions/base/js.1*/
@@ -2465,7 +2469,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2480,7 +2484,7 @@ var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2495,7 +2499,7 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2512,7 +2516,7 @@ var el = document.getElementById('i89');
 
 el.addEventListener('click', function(e){
     /*#i97.i98.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2529,7 +2533,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2546,7 +2550,7 @@ var el = document.getElementById('i93');
 
 el.addEventListener('click', function(e){
     /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/uhJpxdwoPQkWtiPD8'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/y1oq7Fh4xTFkw6mi9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2570,23 +2574,21 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i105.image.meta:image/meta*/
-name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i105.i106.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: XpVuu5B.jpg; fileId: ; sourceTypeId: externalUrl;
+name: HHITFNu.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 1CiMOEB.gif; fileId: ; sourceTypeId: externalUrl;
+name: 3pTJ1fK.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i76.slice-image.meta:slice-image/meta.1*/
-name: wOlRToS.jpg; fileId: ; sourceTypeId: externalUrl;
+name: nj4wMso.gif; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: Lz5HsUI.gif; fileId: ; sourceTypeId: externalUrl;
+name: pc1LZBY.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i103.slice-image.meta:slice-image/meta.1*/
+name: bnjbW5R.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i74.image.meta:image/meta*/
@@ -2610,13 +2612,18 @@ customName: 1;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: #Automercol le brinda servicio autorizado en el taller Mercedes-Benz de mayor experiencia y tradición del país.; customName: false;
+name: En #Automercol encuentras todas las facilidades para llevártelo a casa.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: Aunque su Mercedes-Benz no haya sido comprado en nuestro concesionario.; customName: false;
+name: ¿Estás listo para estrenar Mercedes-Benz?; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i105.image.meta:image/meta*/
+name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i105.i106.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i81.shape.meta:shape/meta*/
 name: LINK MAPA;
 /*#/#*//*#i81.i82.positioning.meta:positioning/meta.2*/
